# whisper_flutter_new

./: README.md  pubspec.yaml  roughwork.txt
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/whisper_flutter_new/: VulkanHelper.kt
example/.fvm/: flutter_sdk
example/ios/Runner/: AppDelegate.swift
example/ios/Runner.xcodeproj/: project.pbxproj
ios/: whisper_flutter_new.podspec
ios/Classes/: MetalHelper.swift  WhisperFlutterNewPlugin.h  WhisperFlutterNewPlugin.m  WhisperFlutterNewPlugin.swift
lib/: whisper_flutter_new.dart
lib/bean/: request_bean.freezed.dart  request_bean.g.dart  response_bean.freezed.dart
